--- a/views/index.erb
+++ b/views/index.erb
@@ -5,6 +5,7 @@
   <meta http-equiv="x-ua-compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, user-scalable=no">
   <meta name="apple-mobile-web-app-capable" content="yes">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <script type="text/javascript" src="js/enchant.min.js"></script>
   <script type="text/javascript">enchant();</script>
   <script type="text/javascript" src="js/main.js"></script>
