--- a/views/index.erb
+++ b/views/index.erb
@@ -9,6 +9,7 @@
   <script type="text/javascript" src="js/enchant.min.js"></script>
   <script type="text/javascript">enchant();</script>
   <script type="text/javascript" src="js/main.js"></script>
+  <script type="text/javascript" src="js/get_quiz.js"></script>
 
   <style type="text/css">
     body{
