--- a/views/index.erb
+++ b/views/index.erb
@@ -8,7 +8,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <script type="text/javascript" src="js/enchant.min.js"></script>
   <script type="text/javascript">enchant();</script>
-  <script type="text/javascript" src="js/main.js"></script>
+  <script type="text/javascript" src="js/run.js"></script>
+  <script type="text/javascript" src="js/scene/title_scene.js"></script>
   <script type="text/javascript" src="js/get_quiz.js"></script>
 
   <style type="text/css">
