--- a/views/index.erb
+++ b/views/index.erb
@@ -10,6 +10,8 @@
   <script type="text/javascript">enchant();</script>
   <script type="text/javascript" src="js/run.js"></script>
   <script type="text/javascript" src="js/scene/title_scene.js"></script>
+  <script type="text/javascript" src="js/scene/userinfo_scene.js"></script>
+  <script type="text/javascript" src="js/user.js"></script>
   <script type="text/javascript" src="js/get_quiz.js"></script>
 
   <style type="text/css">
