:art: :new: Quizクラスの作成と画面遷移処理の実装

--- a/views/index.erb
+++ b/views/index.erb
@@ -9,8 +9,10 @@
   <script type="text/javascript" src="js/enchant.min.js"></script>
   <script type="text/javascript">enchant();</script>
   <script type="text/javascript" src="js/run.js"></script>
+  <script type="text/javascript" src="js/quiz.js"></script>
   <script type="text/javascript" src="js/scene/title_scene.js"></script>
   <script type="text/javascript" src="js/scene/userinfo_scene.js"></script>
+  <script type="text/javascript" src="js/scene/useranswer_scene.js"></script>
   <script type="text/javascript" src="js/user.js"></script>
   <script type="text/javascript" src="js/get_quiz.js"></script>
 
