:new: ゲーム画面への遷移処理を実装

--- a/views/index.erb
+++ b/views/index.erb
@@ -13,6 +13,7 @@
   <script type="text/javascript" src="js/scene/title_scene.js"></script>
   <script type="text/javascript" src="js/scene/userinfo_scene.js"></script>
   <script type="text/javascript" src="js/scene/useranswer_scene.js"></script>
+  <script type="text/javascript" src="js/scene/game_scene.js"></script>
   <script type="text/javascript" src="js/user.js"></script>
   <script type="text/javascript" src="js/get_quiz.js"></script>
 
