--- a/views/index.erb
+++ b/views/index.erb
@@ -15,6 +15,7 @@
   <script type="text/javascript" src="js/scene/useranswer_scene.js"></script>
   <script type="text/javascript" src="js/scene/game_scene.js"></script>
   <script type="text/javascript" src="js/user.js"></script>
+  <script type="text/javascript" src="js/userview.js"></script>
   <script type="text/javascript" src="js/get_quiz.js"></script>
 
   <style type="text/css">
